--- a/Theme/Themes/Buttons/RepeatButton.xaml
+++ b/Theme/Themes/Buttons/RepeatButton.xaml
@@ -5,7 +5,9 @@
         <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
         <ResourceDictionary Source="/Theme;component/Themes/Buttons/ButtonBase.xaml"/>
     </ResourceDictionary.MergedDictionaries>
-    
-    <Style TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource ButtonsBaseStyle}"/>
+
+    <Style TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource ButtonsBaseStyle}">
+        <Setter Property="OverridesDefaultStyle" Value="True"/>
+    </Style>
 
 </ResourceDictionary>
