--- a/Theme/Themes/TextBoxes/PasswordBox.xaml
+++ b/Theme/Themes/TextBoxes/PasswordBox.xaml
@@ -12,13 +12,16 @@
 
         <Setter Property="CaretBrush" Value="{StaticResource Foreground}"/>
         <Setter Property="SelectionBrush" Value="{StaticResource ForegroundMiddlelight}"/>
-        
+
+        <Setter Property="OverridesDefaultStyle" Value="True"/>
+
         <Style.Triggers>
             <Trigger Property="IsKeyboardFocusWithin" Value="True">
                 <Setter Property="BorderBrush" Value="{StaticResource Accent}"/>
                 <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
             </Trigger>
         </Style.Triggers>
+        
     </Style>
 
 </ResourceDictionary>
