--- a/Theme/Themes/TextBoxes/RichTextBox.xaml
+++ b/Theme/Themes/TextBoxes/RichTextBox.xaml
@@ -7,11 +7,15 @@
     </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType="{x:Type RichTextBox}" BasedOn="{StaticResource TextBoxBaseStyle}">
+        
         <Style.Resources>
             <Style x:Key="{x:Type FlowDocument}" TargetType="{x:Type FlowDocument}">
                 <Setter Property="OverridesDefaultStyle" Value="True"/>
             </Style>
         </Style.Resources>
+
+        <Setter Property="OverridesDefaultStyle" Value="True"/>
+        
     </Style>
     
 </ResourceDictionary>
