--- a/Theme.Test/MainWindow.xaml
+++ b/Theme.Test/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Elysium.Theme.Test.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:InternalControls="clr-namespace:Elysium.Theme.Controls;assembly=Theme"
-        Title="MainWindow"
-        Background="{StaticResource Background}"
-        MouseLeftButtonDown="WindowMouseLeftButtonDown"
-        Width="1000" Height="600">
+﻿<InternalControls:Window x:Class="Elysium.Theme.Test.MainWindow"
+                         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                         xmlns:InternalControls="clr-namespace:Elysium.Theme.Controls;assembly=Theme"
+                         Title="MainWindow"
+                         Background="{StaticResource Background}"
+                         MouseLeftButtonDown="WindowMouseLeftButtonDown"
+                         Width="1000" Height="600">
     <Grid Background="{StaticResource Transparent}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="125"/>
@@ -19,7 +19,7 @@
             <RowDefinition Height="60"/>
             <RowDefinition Height="60"/>
             <RowDefinition Height="60"/>
-            <RowDefinition Height="60"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
@@ -37,13 +37,12 @@
                       Content="ToggleButton"/>
         <InternalControls:CommandButton Grid.Column="0"
                                         Grid.Row="3"
-                                        Width="48"
-                                        Height="48">
+                                        HorizontalAlignment="Center"
+                                        Width="30" Height="30">
             <Grid Background="Transparent">
-                <Polygon Points="0,0 30,0"
-                         Stroke="Black"
-                         HorizontalAlignment="Center"
-                         VerticalAlignment="Center"/>
+                <Path Data="M 10,0 L 10,20 M 0,10 L 20,10"
+                      Stroke="Black"
+                      StrokeThickness="3"/>
             </Grid>
         </InternalControls:CommandButton>
         <CheckBox Grid.Column="0"
@@ -78,11 +77,18 @@
                    Text="TextBlock"/>
         <ComboBox Grid.Column="2"
                   Grid.Row="0"
-                  Margin="15"
+                  Margin="15" MaxDropDownHeight="100"
                   SelectedIndex="0">
             <ComboBoxItem>Default item</ComboBoxItem>
             <ComboBoxItem>Item 1</ComboBoxItem>
             <ComboBoxItem>Item 2</ComboBoxItem>
+            <ComboBoxItem>Item 3</ComboBoxItem>
+            <ComboBoxItem>Item 4</ComboBoxItem>
+            <ComboBoxItem>Item 5</ComboBoxItem>
+            <ComboBoxItem>Item 6</ComboBoxItem>
+            <ComboBoxItem>Item 7</ComboBoxItem>
+            <ComboBoxItem>Item 8</ComboBoxItem>
+            <ComboBoxItem>Item 9</ComboBoxItem>
         </ComboBox>
         <ListBox Grid.Column="2"
                  Grid.Row="1"
@@ -92,6 +98,9 @@
             <ListBoxItem>Default item</ListBoxItem>
             <ListBoxItem>Item 1</ListBoxItem>
             <ListBoxItem>Item 2</ListBoxItem>
+            <ListBoxItem>Item 3</ListBoxItem>
+            <ListBoxItem>Item 4</ListBoxItem>
+            <ListBoxItem>Item 5</ListBoxItem>
         </ListBox>
         <ScrollViewer Grid.Column="3"
                       Grid.Row="0"
@@ -128,4 +137,4 @@
                                       IsIndeterminate="{x:Null}"
                                       Margin="15"/>
     </Grid>
-</Window>
+</InternalControls:Window>
