--- a/Theme/Themes/Buttons/CheckBox.xaml
+++ b/Theme/Themes/Buttons/CheckBox.xaml
@@ -1,139 +1,132 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
-    </ResourceDictionary.MergedDictionaries>
-    
-    <Style TargetType="{x:Type CheckBox}">
-        
-        <Setter Property="Background" Value="{StaticResource Transparent}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
-        <Setter Property="BorderThickness" Value="{StaticResource DefaultThickness}"/>
-        <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
-        <Setter Property="FontFamily" Value="{StaticResource FontFamily}"/>
-        <Setter Property="FontSize" Value="9pt"/>
-        <Setter Property="FontWeight" Value="Normal"/>
+	<ResourceDictionary.MergedDictionaries>
+		<ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
+	</ResourceDictionary.MergedDictionaries>
+	
+	<Style TargetType="{x:Type CheckBox}">
+		
+		<Setter Property="Background" Value="{StaticResource Transparent}"/>
+		<Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
+		<Setter Property="BorderThickness" Value="{StaticResource DefaultThickness}"/>
+		<Setter Property="Foreground" Value="{StaticResource Foreground}"/>
+		<Setter Property="FontFamily" Value="{StaticResource FontFamily}"/>
+		<Setter Property="FontSize" Value="9pt"/>
+		<Setter Property="FontWeight" Value="Normal"/>
 
-        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
+		<Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
 
-        <Setter Property="HorizontalContentAlignment" Value="Left"/>
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Padding" Value="{StaticResource BoldPadding}"/>
+		<Setter Property="HorizontalContentAlignment" Value="Left"/>
+		<Setter Property="VerticalContentAlignment" Value="Center"/>
+		<Setter Property="Padding" Value="{StaticResource BoldPadding}"/>
 
-        <Setter Property="OverridesDefaultStyle" Value="True"/>
-        <Setter Property="SnapsToDevicePixels" Value="True"/>
+		<Setter Property="OverridesDefaultStyle" Value="True"/>
+		<Setter Property="SnapsToDevicePixels" Value="True"/>
 
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type CheckBox}">
-
-                    <Grid Background="{StaticResource Transparent}"
-                          Margin="{TemplateBinding Padding}">
-                        <BulletDecorator Background="{StaticResource Transparent}"
-                                         TextBlock.Foreground="{TemplateBinding Foreground}"
-                                         TextBlock.FontFamily="{TemplateBinding FontFamily}"
-                                         TextBlock.FontSize="{TemplateBinding FontSize}"
-                                         TextBlock.FontWeight="{TemplateBinding FontWeight}"
-                                         FlowDirection="{TemplateBinding FlowDirection}">
-                            <BulletDecorator.Bullet>
-                                <Border Background="{TemplateBinding Background}"
-                                        BorderBrush="{TemplateBinding BorderBrush}"
-                                        BorderThickness="{TemplateBinding BorderThickness}"
-                                        Width="{StaticResource BulletBorderSize}" Height="{StaticResource BulletBorderSize}">
-                                    <Grid Background="{StaticResource Transparent}">
-                                        <Path x:Name="CheckBullet"
-                                              Fill="{StaticResource Transparent}"
-                                              Stroke="{StaticResource ForegroundLowlight}"
-                                              StrokeThickness="{StaticResource BoldThicknessValue}"
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type CheckBox}">
+					
+					<Grid Background="{StaticResource Transparent}"
+						  Margin="{TemplateBinding Padding}"
+						  SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+						<BulletDecorator Background="{StaticResource Transparent}"
+										 TextBlock.Foreground="{TemplateBinding Foreground}"
+										 TextBlock.FontFamily="{TemplateBinding FontFamily}"
+										 TextBlock.FontSize="{TemplateBinding FontSize}"
+										 TextBlock.FontWeight="{TemplateBinding FontWeight}"
+										 FlowDirection="{TemplateBinding FlowDirection}">
+							<BulletDecorator.Bullet>
+								<Border Background="{TemplateBinding Background}"
+										BorderBrush="{TemplateBinding BorderBrush}"
+										BorderThickness="{TemplateBinding BorderThickness}"
+										Width="{StaticResource BulletBorderSize}" Height="{StaticResource BulletBorderSize}">
+									<Grid Background="{StaticResource Transparent}">
+										<Path x:Name="CheckBullet"
+											  Fill="{StaticResource Transparent}"
+											  Stroke="{StaticResource ForegroundLowlight}"
+											  StrokeThickness="{StaticResource BoldThicknessValue}"
 											  Stretch="Fill"
-                                              Visibility="Collapsed"
-                                              HorizontalAlignment="Center" VerticalAlignment="Center"
-                                              Width="{StaticResource CheckBoxBulletSize}" Height="{StaticResource CheckBoxBulletSize}">
-                                            <Path.Data>
-                                                <GeometryGroup>
-                                                    <LineGeometry StartPoint="0,3" EndPoint="4,8"/>
-                                                    <LineGeometry StartPoint="4,8" EndPoint="8,0"/>
-                                                </GeometryGroup>
-                                            </Path.Data>
-                                        </Path>
-                                        <Path x:Name="IndeterminateBullet"
-                                              Fill="{StaticResource ForegroundLowlight}"
-                                              StrokeThickness="0"
+											  Visibility="Collapsed"
+											  HorizontalAlignment="Center" VerticalAlignment="Center"
+											  Width="{StaticResource CheckBoxBulletSize}" Height="{StaticResource CheckBoxBulletSize}">
+											<Path.Data>
+												<GeometryGroup>
+													<LineGeometry StartPoint="0,3" EndPoint="4,8"/>
+													<LineGeometry StartPoint="4,8" EndPoint="8,0"/>
+												</GeometryGroup>
+											</Path.Data>
+										</Path>
+										<Path x:Name="IndeterminateBullet"
+											  Fill="{StaticResource ForegroundLowlight}"
+											  StrokeThickness="0"
 											  Stretch="Fill"
-                                              Visibility="Collapsed"
+											  Visibility="Collapsed"
 											  Margin="2"
-                                              HorizontalAlignment="Center" VerticalAlignment="Center"
-                                              Width="{StaticResource CheckBoxBulletSize}" Height="{StaticResource CheckBoxBulletSize}">
-                                            <Path.Data>
-                                                <GeometryGroup>
-                                                    <RectangleGeometry Rect="0,0,1,1"/>
-                                                </GeometryGroup>
-                                            </Path.Data>
-                                        </Path>
-                                    </Grid>
-                                </Border>
-                            </BulletDecorator.Bullet>
-                            <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                              VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                              RecognizesAccessKey="True">
-                                <ContentPresenter.Margin>
-                                    <Thickness Left="{StaticResource BoldPaddingValue}"
-                                               Top="0"
-                                               Right="0"
-                                               Bottom="0"/>
-                                </ContentPresenter.Margin>
-                            </ContentPresenter>
-                        </BulletDecorator>
-                    </Grid>
-
-                    <ControlTemplate.Triggers>
-                        
-                        <Trigger Property="IsChecked" Value="True">
-                            <Setter TargetName="CheckBullet" Property="Visibility" Value="Visible"/>
-                        </Trigger>
-                        
-                        <MultiTrigger>
-                            <MultiTrigger.Conditions>
-                                <Condition Property="IsThreeState" Value="True"/>
-                                <Condition Property="IsChecked" Value="{x:Null}"/>
-                            </MultiTrigger.Conditions>
-                            <MultiTrigger.Setters>
-                                <Setter TargetName="IndeterminateBullet" Property="Visibility" Value="Visible"/>
-                            </MultiTrigger.Setters>
-                        </MultiTrigger>
-                        
-                        <Trigger Property="IsEnabled" Value="False">
-                            <Setter TargetName="CheckBullet" Property="Path.Stroke" Value="{StaticResource Disabled}"/>
-                            <Setter TargetName="IndeterminateBullet" Property="Path.Fill" Value="{StaticResource Disabled}"/>
-                        </Trigger>
-                        
-                    </ControlTemplate.Triggers>
-                    
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-        
-        <Style.Triggers>
-            
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="{StaticResource ForegroundHighlight}"/>
-                <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
-            </Trigger>
-
-            <Trigger Property="IsPressed" Value="True">
-                <Setter Property="Background" Value="{StaticResource ForegroundHighlight}"/>
-                <Setter Property="BorderBrush" Value="{StaticResource ForegroundLowlight}"/>
-            </Trigger>
-
-            <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Background" Value="{StaticResource Transparent}"/>
-                <Setter Property="BorderBrush" Value="{StaticResource Disabled}"/>
-                <Setter Property="Foreground" Value="{StaticResource Disabled}"/>
-            </Trigger>
-
-        </Style.Triggers>
-        
-    </Style>
+											  HorizontalAlignment="Center" VerticalAlignment="Center"
+											  Width="{StaticResource CheckBoxBulletSize}" Height="{StaticResource CheckBoxBulletSize}">
+											<Path.Data>
+												<GeometryGroup>
+													<RectangleGeometry Rect="0,0,1,1"/>
+												</GeometryGroup>
+											</Path.Data>
+										</Path>
+									</Grid>
+								</Border>
+							</BulletDecorator.Bullet>
+							<ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+											  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+											  RecognizesAccessKey="True">
+								<ContentPresenter.Margin>
+									<Thickness Left="{StaticResource BoldPaddingValue}"
+											   Top="0"
+											   Right="0"
+											   Bottom="0"/>
+								</ContentPresenter.Margin>
+							</ContentPresenter>
+						</BulletDecorator>
+					</Grid>
+					
+					<ControlTemplate.Triggers>						
+						<Trigger Property="IsChecked" Value="True">
+							<Setter TargetName="CheckBullet" Property="Visibility" Value="Visible"/>
+						</Trigger>						
+						<MultiTrigger>
+							<MultiTrigger.Conditions>
+								<Condition Property="IsThreeState" Value="True"/>
+								<Condition Property="IsChecked" Value="{x:Null}"/>
+							</MultiTrigger.Conditions>
+							<MultiTrigger.Setters>
+								<Setter TargetName="IndeterminateBullet" Property="Visibility" Value="Visible"/>
+							</MultiTrigger.Setters>
+						</MultiTrigger>						
+						<Trigger Property="IsEnabled" Value="False">
+							<Setter TargetName="CheckBullet" Property="Path.Stroke" Value="{StaticResource Disabled}"/>
+							<Setter TargetName="IndeterminateBullet" Property="Path.Fill" Value="{StaticResource Disabled}"/>
+						</Trigger>						
+					</ControlTemplate.Triggers>
+					
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+		
+		<Style.Triggers>			
+			<Trigger Property="IsMouseOver" Value="True">
+				<Setter Property="Background" Value="{StaticResource ForegroundHighlight}"/>
+				<Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
+			</Trigger>
+			<Trigger Property="IsPressed" Value="True">
+				<Setter Property="Background" Value="{StaticResource ForegroundHighlight}"/>
+				<Setter Property="BorderBrush" Value="{StaticResource ForegroundLowlight}"/>
+			</Trigger>
+			<Trigger Property="IsEnabled" Value="False">
+				<Setter Property="Background" Value="{StaticResource Transparent}"/>
+				<Setter Property="BorderBrush" Value="{StaticResource Disabled}"/>
+				<Setter Property="Foreground" Value="{StaticResource Disabled}"/>
+			</Trigger>
+		</Style.Triggers>	
+		
+	</Style>
 
 </ResourceDictionary>
