--- a/Theme/Themes/Buttons/RepeatCommandButton.xaml
+++ b/Theme/Themes/Buttons/RepeatCommandButton.xaml
@@ -7,6 +7,6 @@
         <ResourceDictionary Source="/Theme;component/Themes/Buttons/CommandButtonsBase.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style x:Key="{x:Type Controls:CommandButton}" TargetType="{x:Type Controls:CommandButton}" BasedOn="{StaticResource CommandButtonsBaseStyle}"/>
+    <Style x:Key="{x:Type Controls:RepeatCommandButton}" TargetType="{x:Type Controls:RepeatCommandButton}" BasedOn="{StaticResource CommandButtonsBaseStyle}"/>
 
 </ResourceDictionary>
