--- a/Theme/Themes/Scrolls/ScrollBar.xaml
+++ b/Theme/Themes/Scrolls/ScrollBar.xaml
@@ -25,7 +25,8 @@
                 <ControlTemplate TargetType="{x:Type RepeatButton}">
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding Background}"
-                            BorderThickness="{TemplateBinding BorderThickness}">
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                         <Polygon Points="{TemplateBinding Content}"
                                  Fill="{TemplateBinding BorderBrush}"
                                  StrokeThickness="0"
@@ -37,20 +38,16 @@
             </Setter.Value>
         </Setter>
         
-        <Style.Triggers>
-            
+        <Style.Triggers>            
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="BorderBrush" Value="{StaticResource ForegroundLowlight}"/>
             </Trigger>
-
             <Trigger Property="IsPressed" Value="True">
                 <Setter Property="BorderBrush" Value="{StaticResource Foreground}"/>
             </Trigger>
-
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="BorderBrush" Value="{StaticResource Disabled}"/>
-            </Trigger>
-            
+            </Trigger>            
         </Style.Triggers>
         
     </Style>
@@ -76,8 +73,7 @@
                     <Rectangle Fill="{TemplateBinding Background}"
                                Stroke="{TemplateBinding BorderBrush}"
                                StrokeThickness="0"
-                               Width="{TemplateBinding Width}"
-                               Height="{TemplateBinding Height}"/>
+                               SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -96,7 +92,7 @@
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
         <Setter Property="Stylus.IsPressAndHoldEnabled" Value="False"/>
         
-        <Setter Property="Padding" Value="{StaticResource DefaultPadding}"/>
+        <Setter Property="Padding" Value="{StaticResource ThinPadding}"/>
 
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
@@ -105,8 +101,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Thumb}">
                     <Grid Background="{StaticResource Transparent}"
-                          Width="{TemplateBinding Width}"
-                          Height="{TemplateBinding Height}">
+                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                         <Rectangle Fill="{TemplateBinding Background}"
                                    Stroke="{TemplateBinding BorderBrush}"
                                    StrokeThickness="0"
@@ -117,29 +112,24 @@
         </Setter>
 
         <Style.Triggers>
-
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="{StaticResource ForegroundLowlight}"/>
             </Trigger>
-
             <Trigger Property="IsDragging" Value="True">
                 <Setter Property="Background" Value="{StaticResource Foreground}"/>
             </Trigger>
-
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="Background" Value="{StaticResource Disabled}"/>
             </Trigger>
-
         </Style.Triggers>
 
     </Style>
     
     <ControlTemplate x:Key="HorizontalScrollBarTemplate" TargetType="{x:Type ScrollBar}">
         <Border Background="{TemplateBinding Background}"
-                BorderBrush="{TemplateBinding BorderBrush}">
-            <Border.BorderThickness>
-                <Thickness Left="0" Top="0" Right="0" Bottom="{StaticResource DefaultThicknessValue}"/>
-            </Border.BorderThickness>
+                BorderBrush="{TemplateBinding BorderBrush}"
+                BorderThickness="{TemplateBinding BorderThickness}"
+                SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
             <Grid Background="{StaticResource Transparent}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -161,8 +151,7 @@
                     </RepeatButton.Content>
                 </RepeatButton>
                 <Track x:Name="PART_Track"
-                       Grid.Column="1"
-                       HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                       Grid.Column="1">
                     <Track.DecreaseRepeatButton>
                         <RepeatButton Command="{x:Static ScrollBar.PageLeftCommand}"
                                       IsEnabled="{TemplateBinding IsEnabled}"
@@ -198,10 +187,9 @@
 
     <ControlTemplate x:Key="VerticalScrollBarTemplate" TargetType="{x:Type ScrollBar}">
         <Border Background="{TemplateBinding Background}"
-                BorderBrush="{TemplateBinding BorderBrush}">
-            <Border.BorderThickness>
-                <Thickness Left="0" Top="0" Right="{StaticResource DefaultThicknessValue}" Bottom="0"/>
-            </Border.BorderThickness>
+                BorderBrush="{TemplateBinding BorderBrush}"
+                BorderThickness="{TemplateBinding BorderThickness}"
+                SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
             <Grid Background="{StaticResource Transparent}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -224,8 +212,7 @@
                 </RepeatButton>
                 <Track x:Name="PART_Track"
                        Grid.Row="1"
-                       IsDirectionReversed="True"
-                       HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                       IsDirectionReversed="True">
                     <Track.DecreaseRepeatButton>
                         <RepeatButton Command="{x:Static ScrollBar.PageUpCommand}"
                                       IsEnabled="{TemplateBinding IsEnabled}"
@@ -262,23 +249,26 @@
     <Style TargetType="{x:Type ScrollBar}">
 
         <Setter Property="Background" Value="{StaticResource Transparent}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource ForegroundHighlight}"/>
-        <Setter Property="BorderThickness" Value="{StaticResource DefaultThickness}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
 
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Focusable" Value="False"/>
         
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
         <Setter Property="Stylus.IsPressAndHoldEnabled" Value="False"/>
-        
-        <Setter Property="Margin" Value="{StaticResource DefaultPadding}"/>
 
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         
         <Style.Triggers>
-            
+
             <Trigger Property="Orientation" Value="Horizontal">
+                
+                <Setter Property="BorderThickness">
+                    <Setter.Value>
+                        <Thickness Left="0" Top="0" Right="0" Bottom="{StaticResource DefaultThicknessValue}"/>
+                    </Setter.Value>
+                </Setter>
 
                 <Setter Property="MinHeight" Value="{StaticResource HorizontalScrollBarHeight}"/>
                 <Setter Property="Height" Value="{StaticResource HorizontalScrollBarHeight}"/>
@@ -289,6 +279,12 @@
             </Trigger>
 
             <Trigger Property="Orientation" Value="Vertical">
+
+                <Setter Property="BorderThickness">
+                    <Setter.Value>
+                        <Thickness Left="0" Top="0" Right="{StaticResource DefaultThicknessValue}" Bottom="0"/>
+                    </Setter.Value>
+                </Setter>
 
                 <Setter Property="MinWidth" Value="{StaticResource VerticalScrollBarWidth}"/>
                 <Setter Property="Width" Value="{StaticResource VerticalScrollBarWidth}"/>
