--- a/Theme/Themes/Scrolls/ScrollViewer.xaml
+++ b/Theme/Themes/Scrolls/ScrollViewer.xaml
@@ -8,7 +8,7 @@
     <Style TargetType="{x:Type ScrollViewer}">
 
         <Setter Property="Background" Value="{StaticResource Transparent}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource Transparent}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
         <Setter Property="FontFamily" Value="{StaticResource FontFamily}"/>
@@ -27,7 +27,8 @@
                 <ControlTemplate TargetType="{x:Type ScrollViewer}">
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}">
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                         <Grid Background="{StaticResource Transparent}">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
@@ -48,26 +49,34 @@
                                                     Margin="{TemplateBinding Padding}"
                                                     HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                                     VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
-                            <Line Grid.Column="0"
-                                  Grid.Row="0"
-                                  Stroke="{StaticResource Semitransparent}"
-                                  StrokeThickness="{StaticResource BoldThicknessValue}"
-                                  Stretch="Fill"
-                                  X1="0" Y1="0"
-                                  X2="1" Y2="0"
-                                  HorizontalAlignment="Stretch"
-                                  VerticalAlignment="Bottom"
-                                  Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"/>
-                            <Line Grid.Column="0"
-                                  Grid.Row="0"
-                                  Stroke="{StaticResource Semitransparent}"
-                                  StrokeThickness="{StaticResource BoldThicknessValue}"
-                                  Stretch="Fill"
-                                  X1="0" Y1="0"
-                                  X2="0" Y2="1"
-                                  HorizontalAlignment="Right"
-                                  VerticalAlignment="Stretch"
-                                  Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"/>
+                            <Rectangle Grid.Column="0"
+                                       Grid.Row="0"
+                                       Stretch="Fill"
+                                       HorizontalAlignment="Stretch"
+                                       VerticalAlignment="Bottom"
+                                       Height="{StaticResource ScrollViewerShadowSize}"
+                                       Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}">
+                                <Rectangle.Fill>
+                                    <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                                        <GradientStop Color="{Binding Color, Source={StaticResource Transparent}}" Offset="0"/>
+                                        <GradientStop Color="{Binding Color, Source={StaticResource Semitransparent}}" Offset="1"/>
+                                    </LinearGradientBrush>
+                                </Rectangle.Fill>
+                            </Rectangle>
+                            <Rectangle Grid.Column="0"
+                                       Grid.Row="0"
+                                       Stretch="Fill"
+                                       HorizontalAlignment="Right"
+                                       VerticalAlignment="Stretch"
+                                       Width="{StaticResource ScrollViewerShadowSize}"
+                                       Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}">
+                                <Rectangle.Fill>
+                                    <LinearGradientBrush StartPoint="0,0.5" EndPoint="1,0.5">
+                                        <GradientStop Color="{Binding Color, Source={StaticResource Transparent}}" Offset="0"/>
+                                        <GradientStop Color="{Binding Color, Source={StaticResource Semitransparent}}" Offset="1"/>
+                                    </LinearGradientBrush>
+                                </Rectangle.Fill>
+                            </Rectangle>
                             <ScrollBar x:Name="PART_HorizontalScrollBar"
                                        Grid.Column="0"
                                        Grid.Row="1"
