--- a/Theme/Themes/Selectors/ListBox.xaml
+++ b/Theme/Themes/Selectors/ListBox.xaml
@@ -8,7 +8,7 @@
     <Style TargetType="{x:Type ListBox}">
 
         <Setter Property="Background" Value="{StaticResource Background}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource Transparent}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
         <Setter Property="FontFamily" Value="{StaticResource FontFamily}"/>
@@ -36,7 +36,8 @@
                 <ControlTemplate TargetType="{x:Type ListBox}">
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}">
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                         <ScrollViewer Focusable="False">
                             <ItemsPresenter/>
                         </ScrollViewer>
@@ -45,17 +46,14 @@
             </Setter.Value>
         </Setter>
         
-        <Style.Triggers>
-            
+        <Style.Triggers>            
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="BorderBrush" Value="{StaticResource Disabled}"/>
                 <Setter Property="Foreground" Value="{StaticResource Disabled}"/>
-            </Trigger>
-            
+            </Trigger>            
             <Trigger Property="IsGrouping" Value="True">
                 <Setter Property="ScrollViewer.CanContentScroll" Value="False"/>
             </Trigger>
-
         </Style.Triggers>
         
     </Style>
