--- a/Theme/Themes/TextBoxes/TextBoxesBase.xaml
+++ b/Theme/Themes/TextBoxes/TextBoxesBase.xaml
@@ -33,7 +33,8 @@
                 <ControlTemplate TargetType="{x:Type Control}">
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}">
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                         <ScrollViewer x:Name="PART_ContentHost"
                                       Margin="{TemplateBinding Padding}"/>
                     </Border>
@@ -42,17 +43,14 @@
         </Setter>
         
         <Style.Triggers>
-
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="BorderBrush" Value="{StaticResource Accent}"/>
                 <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
             </Trigger>
-
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="BorderBrush" Value="{StaticResource Disabled}"/>
                 <Setter Property="Foreground" Value="{StaticResource Disabled}"/>
             </Trigger>
-
         </Style.Triggers>
         
     </Style>
