- Fixed bugs 598, 605 (found in: Alpha; will be fixed in: CTP 1)

--- a/Theme/Themes/Buttons/CommandButtonsBase.xaml
+++ b/Theme/Themes/Buttons/CommandButtonsBase.xaml
@@ -10,7 +10,7 @@
         
         <Setter Property="Background" Value="{StaticResource Transparent}"/>
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
-        <Setter Property="BorderThickness" Value="{StaticResource BoldThickness}"/>
+        <Setter Property="BorderThickness" Value="{StaticResource SemiboldThickness}"/>
         <Setter Property="Foreground" Value="{StaticResource ForegroundMiddlelight}"/>
 
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
